assets/style.css
/****** General ***********/
* {
  box-sizing: border-box;
}

:root {
  --main-color: #9356DC;
  --secondary-color: #FF79DA;
  --tertiary-color: #99E2D0;
  --font-family-title: 'Strickland', sans-serif;
  --font-family-text: 'Roboto', sans-serif;
}

body {
  margin: 0 auto;
}

header {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

.header {
  padding-left: 105px;
  padding-right: 105px;
  padding-top: 14px;
  padding-bottom: 13px;
  background: var(--White, #FFF);
  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
}

.logo {
  width: 162px;
  height: 36px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.location {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 17px;
  background-color: #EAEAEA;
  width: 100%;
}

.location p {
  font-family: var(--font-family-text);
  color: #353535;
}

.restaurants-explorer {
  background-color: #F6F6F6;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  height: 326px;
}

.restaurants-explorer h1 {
  font-family: var(--font-family-text);
  font-size: 24px;
  text-align: center;
  margin: 0;
}

.restaurants-explorer p {
  font-family: var(--font-family-text);
  font-size: 18px;
  color: #353535;
  font-weight: 300;
  text-align: center;
  margin: 0;
}

button {
  font-family: var(--font-family-text);
  color: white;
  border-radius: 25px;
  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
  background: var(--Button-Gradient, linear-gradient(193deg, var(--main-color) -11.44%, var(--secondary-color) 123.93%));
  border: none;
  width: 58%;
  height: 50px;
}

.fonctionnement {
  display: flex;
}

.fonctionnement h1 {
  font-family: var(--font-family-text);
  font-size: 24px;
  margin-left: 5%;
  margin-top: 12.8%;
  margin-right: 21%;
  margin-bottom: 7%;
}

.list {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 25px;
  margin-bottom: 68px;
}

.list > div {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 86%;
  position: relative;
}

.circle {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 24px;
  height: 24px;
  background-color: var(--main-color);
  border-radius: 50%;
  color: white;
  font-family: var(--font-family-text);
  font-size: 14.182px;
  line-height: 24px;
  text-align: center;
  position: absolute;
  left: -14px;
}

.working-list {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  border-radius: 20px;
  background: var(--Background, #F6F6F6);
  width: 100%;
  height: 72.379px;
}

.working-list p {
  font-family: var(--font-family-text);
  font-weight: bold;
  margin: 0;
}

.restaurants {
  background-color: #F6F6F6;
  padding-top: 54px;
}
.restaurants h1 {
  font-family: var(--font-family-text);
  font-size: 24px;
  margin-left: 5%;
  margin-right: 21%;
}

.restaurants-cards {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 15px;
  padding-bottom: 66px;
}

#badge {
  background-color: var(--tertiary-color);
  color: #008766;
  padding: 5px 10px;
  border-radius: 5px;
  font-size: 14px;
  border-radius: 0;
  position: absolute;
  margin-top: 10px;
  margin-left: 68%;
  border-radius: 2px;
}

.restaurants-card {
  width: 90%;
  margin: 0 auto;
  background-color: white;
  border-radius: 15px;
}

.restaurants-card img {
  width: 100%;
  height: 231px;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  object-fit: cover;
}

.restaurants-card h2 {
  font-family: var(--font-family-text);
  font-size: 18px;
  margin: 0;
}

.restaurants-card p {
  font-family: var(--font-family-text);
  font-size: 17px;
  margin: 0;
}

.restaurants-card-text {
  display: flex;
  padding-left:15px;
  padding-bottom: 12px;
  padding-top: 15px;
  flex-direction: column;
  align-items: flex-start;
  gap: 8px;
  align-self: stretch;
}

.cards-content {
  display: flex;
  justify-content: space-between;
}

.heart {
  margin-top: 23px;
  margin-right: 5%;
}

footer {
  background: var(--Grey, #353535);
  display: flex;
  padding: 22px 25px;
  flex-direction: column;
  align-items: flex-start;
  gap: 16px;
}

footer img {
  width: 60%;
  height: auto;
}

footer p {
  font-family: var(--font-family-text);
  color: var(--White, #FFF);
  margin: 0;
}

.footer-text {
  display: flex;
  gap: 7px;
  flex-direction: column;
}

.footer-text div {
  display: flex;
  gap: 11px;
}

